# Sgames

./: CMakeLists.txt  README.md  TicTacToe.cpp
include/Sgames/: Arcanoid.hpp  Pong.h  Pong.hpp  TicTacToe.h  TicTacToe.hpp
src/: Arcanoid.cpp  Pong.cpp  TicTacToe.cpp  main.cpp
